# programnode-translator

./: .gitignore  CMakeLists.txt  README.md  SyntaxTree.thrift  build.sh  index.html
CMake/: Dependencies.cmake
backup/: Math.as
backup/flash/net/: URLRequest.as
builtin/: Boolean.as  CMakeLists.txt  FrameDrive.as  Math.as  RegExp.as  String.as
builtin/flash/display/: Bitmap.as  BitmapData.as  BitmapDataChannel.as  BlendMode.as  DisplayObject.as  DisplayObjectContainer.as  Graphics.as  IBitmapDrawable.as  InteractiveObject.as  Loader.as  LoaderInfo.as  MovieClip.as  Sprite.as  Stage.as  StageAlign.as  StageScaleMode.as
builtin/flash/errors/: EOFError.as  IOError.as  InvalidSWFError.as
builtin/flash/events/: ErrorEvent.as  Event.as  EventDispatcher.as  GestureEvent.as  GesturePhase.as  HTTPStatusEvent.as  IEventDispatcher.as  IOErrorEvent.as  KeyboardEvent.as  MouseEvent.as  PressAndTapGestureEvent.as  ProgressEvent.as  TextEvent.as  TimerEvent.as  TouchEvent.as  TransformGestureEvent.as  UncaughtErrorEvents.as
builtin/flash/filters/: BitmapFilter.as  BlurFilter.as  ColorMatrixFilter.as  DropShadowFilter.as  GlowFilter.as
builtin/flash/geom/: ColorTransform.as  Matrix.as  Matrix3D.as  PerspectiveProjection.as  Point.as  Rectangle.as  Transform.as  Vector2D.as  Vector3D.as
builtin/flash/media/: Sound.as  SoundChannel.as  SoundLoaderContext.as
builtin/flash/net/: Socket.as  URLLoader.as  URLLoaderDataFormat.as  URLRequest.as  URLRequestHeader.as  URLRequestMethod.as  URLStream.as  URLVariables.as
builtin/flash/system/: ApplicationDomain.as  Capabilities.as  LoaderContext.as  SecurityDomain.as  System.as
builtin/flash/text/: StyleSheet.as  TextField.as  TextFormat.as  TextLineMetrics.as  TextSnapshot.as
builtin/flash/ui/: ContextMenu.as  Multitouch.as  MultitouchInputMode.as
builtin/flash/utils/: ByteArray.as  Dictionary.as  Endian.as  Function.as  Timer.as  def.as
builtin/toplevel/: Array.as  Boolean.as  Class.as  Date.as  Error.as  Function.as  Math.as  Number.as  Object.as  RegExp.as  String.as  XML.as  XMLList.as  def.as  int.as  uint.as
debian/: asc.install  asc.sh  changelog  control  copyright  pnc.install  pnc.private  rules
gen-cpp/: AstDumper.cpp  AstDumper.h  AstDumper_server.skeleton.cpp  SyntaxTree_constants.cpp  SyntaxTree_constants.h  SyntaxTree_types.cpp  SyntaxTree_types.h
hide/flash/display/: Bitmap.as
hide/flash/events/: ErrorEvent.as  EventDispatcher.as  TimerEvent.as
hide/flash/geom/: Matrix.as  Point.as  Rectangle.as
hide/flash/net/: URLRequestMethod.as
hide/flash/utils/: Timer.as
include/: global.h  pnode_reader.h  pnodehandler.empty.h  pnodehandler.h
include/as/ast/: argument.h  arguments.h  assignment.h  attribute_list.h  binary_operator.h  call.h  class_base.h  class_define.h  class_definition.h  class_interface.h  class_name.h  class_stmt.h  expression.h  expression_list.h  function_attribute.h  function_common.h  function_definition.h  function_name.h  function_parameter_item.h  function_parameters.h  function_rettype.h  function_signature.h  identifier.h  if_stmt_condition.h  if_stmt_else.h  if_stmt_then.h  instanceof.h  is.h  literal.h  literal_boolean.h  literal_number.h  literal_string.h  node.h  program.h  return_stmt.h  statement.h  statement_list.h  stmt_expression.h  unary_operator.h  variable_declare.h
include/as/symbol/: Debug.h  Function.h  PrimitiveType.h  Registrable.h  Scope.h  Symbol.h  SymbolTable.h  (+10 more)
include/backend/: context.h
include/service/: ArgumentsService.h  ConfigService.h  PassManagerService.h  argumentsservice.h  configservice.h  globalsettings.h  linkermanagerservice.h  passmanagerservice.h
src/: ConfigService.cpp  Makefile  global.cpp  interpret.cpp  main.cpp  pn-ld.cpp  pnc.cpp  prepend_data.cpp  server.cpp
src/service/: configservice.cpp
test/: CMakeLists.txt
test/GoNiblerGo/: CMakeLists.txt  GoNiblerGo.as  Person.as  frt.ini
test/boost/: CMakeLists.txt  prop_tree.cpp
test/multiple_pn/: 02_main.as  CMakeLists.txt  main.as  p.as  string.as
test/normal/: binary.as  class.as  class_compare.as  class_mem_var.as  complex_class_define.as  complex_class_define_2.as  fib_for.as  fib_rec.as  fib_while.as  function.as  hello.as  inherit.as  interface.as  lit.cfg  literal_bool.as  multi_inherit.as  ns.as  unary.as  var.as  var_init.as  void_call.as
test_framework/: CMakeLists.txt
test_framework/FileCheck/: CMakeLists.txt
test_framework/MessageChecker/: CMakeLists.txt  MessageChecker.py
test_framework/not/: CMakeLists.txt
(+303 files in other folders)
